# EnumString

./: CMakeLists.txt  README.md
include/EnumString/: enum_string.h
src/EnumString/: main.cpp
